--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: Class-Tie-InsideOut
-version: 0.03
+version: 0.04
 author:
   - 'Robert Rothenberg <rrwo at cpan.org>'
 abstract: Inside-out objects on the cheap using tied hashes
@@ -8,7 +8,7 @@ license: perl
 resources:
   license: http://dev.perl.org/licenses/
 requires:
-  Class::ISA: 0
+  Carp: 0
   perl: 5.6.1
 build_requires:
   Test::More: 0
@@ -17,10 +17,10 @@ recommends:
 provides:
   Class::Tie::InsideOut:
     file: lib/Class/Tie/InsideOut.pm
-    version: 0.03
+    version: 0.04
   Tie::InsideOut:
     file: lib/Tie/InsideOut.pm
-    version: 0.03
+    version: 0.04
 generated_by: Module::Build version 0.2707
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
