--- a/META.yml
+++ b/META.yml
@@ -1,6 +1,6 @@
 ---
 name: Class-Tie-InsideOut
-version: 0.04
+version: 0.05
 author:
   - 'Robert Rothenberg <rrwo at cpan.org>'
 abstract: Inside-out objects on the cheap using tied hashes
@@ -9,18 +9,20 @@ resources:
   license: http://dev.perl.org/licenses/
 requires:
   Carp: 0
+  Scalar::Util: 0
   perl: 5.6.1
 build_requires:
   Test::More: 0
 recommends:
   Pod::Readme: 0.06
+  Storable: 0
 provides:
   Class::Tie::InsideOut:
     file: lib/Class/Tie/InsideOut.pm
-    version: 0.04
+    version: 0.05
   Tie::InsideOut:
     file: lib/Tie/InsideOut.pm
-    version: 0.04
+    version: 0.05
 generated_by: Module::Build version 0.2707
 meta-spec:
   url: http://module-build.sourceforge.net/META-spec-v1.2.html
